// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration - gen-js schemaFile - invalid 1`] = `
[
  null,
  "",
  "[@runtime-env/cli]
  schema file not found: no such file, open 'invalid'
",
]
`;

exports[`integration - gen-js schemaFile 1`] = `
[
  null,
  "// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "inline",
  "BAR": undefined,
}

",
  "",
]
`;

exports[`integration - gen-js globalVariableName 1`] = `
[
  null,
  "// Generated by '@runtime-env/cli'

globalThis.env = {
  "FOO": "inline",
  "BAR": undefined,
}

",
  "",
]
`;

exports[`integration - gen-js optionalEnv - invalid 1`] = `
[
  null,
  "",
  "[@runtime-env/cli]
  env is invalid: [{"instancePath":"/BAR","schemaPath":"#/properties/BAR/type","keyword":"type","params":{"type":"object"},"message":"must be object"}]
",
]
`;

exports[`integration - gen-js optionalEnv 1`] = `
[
  null,
  "// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "inline",
  "BAR": {"BAZ":"baz"},
}

",
  "",
]
`;

exports[`integration - gen-js outputFile 1`] = `
[
  null,
  "",
  "",
]
`;

exports[`integration - gen-js outputFile 2`] = `
"// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "inline",
  "BAR": undefined,
}
"
`;

exports[`integration - gen-js requiredEnv - invalid 1`] = `
[
  null,
  "",
  "[@runtime-env/cli]
  env is invalid: [{"instancePath":"","schemaPath":"#/required","keyword":"required","params":{"missingProperty":"FOO"},"message":"must have required property 'FOO'"}]
",
]
`;

exports[`integration - gen-js requiredEnv 1`] = `
[
  null,
  "// Generated by '@runtime-env/cli'

globalThis.runtimeEnv = {
  "FOO": "inline",
  "BAR": undefined,
}

",
  "",
]
`;
